--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@astrojs/mdx": "^4.0.8",
+    "@tailwindcss/vite": "^4.0.5",
+    "tailwindcss": "^4.0.5"
+  },
+  "devDependencies": {
+    "astro": "^5.2.5",
+    "typescript": "^5.7.3"
   }
 }
