--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@astrojs/mdx": "^4.0.8",
     "@tailwindcss/vite": "^4.0.5",
-    "tailwindcss": "^4.0.5"
+    "portafolio": "file:",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "astro": "^5.2.5",
